# NamedPipeCommunicationLib

./: .gitignore  CMakeLists.txt
cpp_service/: CMakeLists.txt
cpp_service/include/: TimerSleep.h  client_handler.h  json_util.h  message_dispatcher.h  pipe_entity.h  protocol.h  win_pipe_connector.h  win_pipe_server.h
cpp_service/src/: client_handler.cpp  pipe_entity.cpp  win_pipe_connector.cpp  win_pipe_server.cpp
deepcool-net/: package.json
deepcool-net/src/: index.ts
test_connector/: CMakeLists.txt  main.cpp
test_server/: CMakeLists.txt  main.cpp
